assets/component-cart-drawer.css
/* ... */
.mini-cart--open .header-wrapper--border-bottom,
.mini-cart--opening .header-wrapper--border-bottom,
.mini-cart--closing .header-wrapper--border-bottom {
  box-shadow: none;
}

.mini-cart--open .header-background,
.mini-cart--opening .header-background,
.mini-cart--closing .header-background {
  display: none;
}

.mini-cart--open .shopify-section-header-hidden {
  transform: none;
}

.mini-cart--closing #mini-cart {
  pointer-events: none;
}

.mini-cart--open announcement-bar[data-compact=false].marquee .announcement-slider {
  animation-play-state: paused;
}

.mini-cart--open drawer-close-button.header__icon--summary::after {
  transform: scale(1);
  transition-delay: var(--duration-long);
}

.cart-drawer {
  padding: 0;
  position: fixed;
  transform: translateX(100%);
  visibility: hidden;
  z-index: 100;
  right: 0;
  top: 0;
  width: calc(100% - 4rem);
  height: var(--max-height);
  overflow: hidden;
  background-color: rgb(var(--color-background));
  --max-height: 100%;
}

.shopify-section-header-sticky.shopify-section-header-hidden .cart-drawer {
  height: 100vh;
}

@supports (height: 100svh) {
  .shopify-section-header-sticky.shopify-section-header-hidden .cart-drawer {
    height: 100svh;
  }
}

.cart-drawer-container summary.header__icon::after {
  content: '';
  display: block;
  position: fixed;
  z-index: 30;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  cursor: url(cross.svg), url(cross.png),zoom-out;
  pointer-events: none;
  transition: opacity var(--duration-long) ease;
  background-color: rgba(var(--color-overlay), 0.5);
}

details[open] > .cart-drawer {
  transition-property: transform, visibility;
  transition-duration: var(--duration-long);
  transition-timing-function: ease;
}

details[open].menu-opening > .cart-drawer {
  transform: translateX(0);
  visibility: visible;
}

@media screen and (min-width: 750px) {
  .cart-drawer {
    width: 45rem;
  }

  .cart-drawer .mini-cart {
    position: relative;
    z-index: 2;
  }
}

.cart-drawer > cart-items {
  display: block;
  height: 100%;
}

.cart-drawer > .loading-overlay {
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.mini-cart {
  height: 100%;
}

.mini-cart__inner {
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 100%;
  background-color: rgb(var(--color-background));
}

.mini-cart__header {
  padding: 2rem;
}

@media screen and (min-width: 750px) {
  .mini-cart__header {
    padding: 3rem;
  }
}

.mini-cart__header .title {
  margin: 0;
  text-transform: uppercase;
  letter-spacing: 0.3rem;
}

.mini-cart__main {
  flex: 1 1 auto;
  overflow-x: hidden;
  overflow-y: auto;
  scroll-snap-type: y mandatory;
  scroll-behavior: smooth;
  scrollbar-width: thin;
}

.mini-cart__main::-webkit-scrollbar {
  appearance: none;
  width: 0.3rem;
  border-radius: 1.6rem;
  background-color: transparent;
}

.mini-cart__main::-webkit-scrollbar-thumb {
  border-radius: 1.6rem;
  background-color: rgb(var(--color-border));
}

.mini-cart__main.cart__items--disabled {
  pointer-events: none;
}

.mini-cart__main cart-items {
  display: block;
  padding: 2rem;
}

@media screen and (min-width: 750px) {
  .mini-cart__main {
    padding-inline-start: 3rem;
    margin-inline-end: 1.5rem;
  }

  .mini-cart__main cart-items {
    padding: 0;
  }
}

.mini-cart__navigation {
  display: flex;
  flex-direction: column;
  margin: 0;
  padding: 0;
  list-style: none;
}

@media screen and (min-width: 750px) {
  .mini-cart__navigation {
    padding-inline-end: 1.5rem;
  }
}

.mini-cart__navigation:empty {
  display: block;
}

.mini-cart__navigation:empty::before {
  content: '';
  display: block;
  width: 100%;
  height: 8rem;
  background-image: linear-gradient(100deg, rgba(var(--color-foreground), 0.06) 40%, rgba(var(--color-foreground), 0.1) 63%, rgba(var(--color-foreground), 0.06) 79%);
  animation: placeholder-shimmer 1.3s linear infinite;
  background-size: 400% 100%;
  border-radius: 0.4rem;
}

@keyframes placeholder-shimmer {
  0% {
    background-position: -150% 0;
  }
  to {
    background-position: 150% 0;
  }
}

.mini-cart__navigation > li {
  position: relative;
  padding: 1.6rem 0;
  border-top: 0.1rem solid rgb(var(--color-border));
}

.mini-cart__navigation > li:first-child {
  padding-top: 0;
  border-top: 0;
}

.mini-cart__navigation > li:last-child {
  padding-bottom: 0;
}

.mini-cart__navigation .loading-overlay {
  left: auto;
  top: auto;
  right: 0;
  width: 1.5rem;
  line-height: 0;
}

.mini-cart__navigation .loading-overlay__spinner,
.mini-cart__navigation .icon-spinner {
  width: 100%;
}

.mini-cart__navigation .loading-overlay:not(.hidden)+* {
  visibility: hidden;
}

.mini-cart__navigation .delete-product {
  line-height: 0;
  overflow: hidden;
  width: 2rem;
  height: 3rem;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 50%;
  color: rgb(var(--color-link));
  transition: color var(--duration-default) ease;
}

.mini-cart__navigation .delete-product .icon {
  position: relative;
  z-index: 2;
  width: 1.8rem;
  height: 1.8rem;
}

.mini-cart__navigation .product-container {
  display: flex;
  column-gap: 1.5rem;
}

.mini-cart__navigation .product-container.no-image {
  grid-template-columns: 1fr;
}

.mini-cart__navigation .product-image {
  flex: 0 0 auto;
  width: 7rem;
  border-radius: min(var(--card-radius), 0.3rem);
}

.mini-cart__navigation .product-image img {
  transition: transform var(--duration-long) ease;
  will-change: transform;
}

@media screen and (hover: hover) {
  .mini-cart__navigation .product-image .media-wrapper:hover img {
    transform: scale(1.1);
  }
}

.mini-cart__navigation .product-description {
  flex: 1 1 auto;
  display: flex;
  flex-direction: column;
}

.mini-cart__navigation .product-content {
  margin-top: 0.6rem;
  line-height: normal;
  display: flex;
  justify-content: space-between;
}
/* ... */

